--- a/Delay_Blind_approach-Scenario_II.ipynb
+++ b/Delay_Blind_approach-Scenario_II.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "Under Scenario II, for each feedback delay, we train a single neural network over the full range of signal-to-noise ratios and dopplers.\n",
     "\n",
-    "It must be noted that **only one training dataset**, i.e. Datasets/ITU_VEHICULAR_B_5000_60kmph, **is available in the repository**. At any rate, in the repository, the reader can find the \"radio_data/Generate_Data.ipnyb\" which can be run to generate the datasets for training. A link to an external storage with the datsets for training will be provided soon.\n",
+    "It must be noted that **the training dataset are currently not available in the repository**. At any rate, in the repository, the reader can find the \"radio_data/Generate_Data.ipnyb\" which can be run to generate the datasets for training. A link to an external storage with the datsets for training will be provided soon.\n",
     "\n",
     "**Note**: the training might take some hours, depending on the available computational resources, the dimension of the training set, the dimension of the network, and the number of epochs. \n",
     "\n",
@@ -86,7 +86,7 @@
     " - number of channel realizations (5000)\n",
     " - relative velocity between the base station and the user mobile equipment (60kmph)\n",
     " \n",
-    "It must be noted that **only one training dataset**, i.e. Datasets/ITU_VEHICULAR_B_5000_60kmph, **is available in the repository**. At any rate, in the repository, the reader can find the \"radio_data/Generate_Data.ipnyb\" which can be run to generate the datasets for training. A link to an external storage with the datsets for training will be provided soon."
+    "It must be noted that **the training dataset are currently not available in the repository**. At any rate, in the repository, the reader can find the \"radio_data/Generate_Data.ipnyb\" which can be run to generate the datasets for training. A link to an external storage with the datsets for training will be provided soon.\n"
    ]
   },
   {
