--- a/E2E_approach-Scenario_I.ipynb
+++ b/E2E_approach-Scenario_I.ipynb
@@ -6,11 +6,11 @@
    "source": [
     "# E2E Approach -- Scenario I\n",
     "\n",
-    "In this notebook, we report the code related to the *end-to-end* (E2E) appraoch in our paper [[1]](#ourpaper). We consider the delay caused by the feedback loop used by the mobile user equipment to send to the base station the channel state information (CSI). Due to this feedback delay, the CSI available at the base station is outdated. In our paper, we present an E2E appraoch, which takes in input the channel history available at the base station and maps it to the probability of an error event for all the modulation and coding schemes (MCS) the base station can select. The error event corresponds to an unsuccessfully decoded frame at the receiver. If the error event probabilities are known for all the MCSs, that it is straightforward to select the MCS that maximized the spectral efficiency.\n",
+    "In this notebook, we report the code related to the *hybrid* appraoch in our paper [[1]] (#ourpaper). We consider the delay caused by the feedback loop used by the mobile user equipment to send to the base station the channel state information (CSI). Due to this feedback delay, the CSI available at the base station becomes outdated. In our paper, we present an E2E appraoch, which takes in input the channel history available at the base station and maps it to the probability of an error event for all the modulation and coding schemes (MCS) the base station can select. The error event corresponds to an unsuccessfully decoded frame at the receiver. If the error event probabilities are known for all the MCSs, then it is straightforward to select the MCS that maximizes the spectral efficiency.\n",
     "\n",
     "Under Scenario I, we train a differnt neural network for each combination of delay, doppler, and signal-to-noise-ratio.\n",
     "\n",
-    "It must be noted that the **training datasets listed below in the code are not in the repository** due to space limitations. At any rate, in the reposiroty the reader can find the \"Generate_Data.ipnyb\" which can be run to generate the datasets for training. We hope to add soon a link to a remote storage with the datasets that we used for training.\n",
+    "It must be noted that **the training dataset are currently not available in the repository**. At any rate, in the repository, the reader can find the \"radio_data/Generate_Data.ipnyb\" which can be run to generate the datasets for training. A link to an external storage with the datsets for training will be provided soon.\n",
     "\n",
     "**Note**: the training might take some hours, depending on the available computational resources, the dimension of the training set, the dimension of the network, and the number of epochs. \n",
     "\n",
@@ -98,7 +98,7 @@
     " - number of subcarriers\n",
     " - snr\n",
     " \n",
-    "It must be noted that the **training datasets listed below in the code are not in the repository due to space limitations**. At any rate, in the repository, the reader can find the \"radio_data/Generate_Data.ipnyb\" which can be run to generate the datasets for training."
+    "It must be noted that **the training dataset are currently not available in the repository**. At any rate, in the repository, the reader can find the \"radio_data/Generate_Data.ipnyb\" which can be run to generate the datasets for training. A link to an external storage with the datsets for training will be provided soon."
    ]
   },
   {
