--- a/Hybrid_approach-Scenario_II.ipynb
+++ b/Hybrid_approach-Scenario_II.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "Under Scenario II, we implement a different Wiener filter for each delay, but we design it to work on the full range of dopplers and signal-to-noise ratios. We then build a different neural netwok for each of Wiener's outputs and we train each of them on the full rage of dopplers and signal-to-noise ratios.\n",
     "\n",
-    "It must be noted that **only one training dataset**, i.e. Datasets/ITU_VEHICULAR_B_5000_60kmph, **is available in the repository**. At any rate, in the repository, the reader can find the \"radio_data/Generate_Data.ipnyb\" which can be run to generate the datasets for training. A link to an external storage with the datsets for training will be provided soon.\n",
+    "It must be noted that **the training dataset are currently not available in the repository**. At any rate, in the repository, the reader can find the \"radio_data/Generate_Data.ipnyb\" which can be run to generate the datasets for training. A link to an external storage with the datsets for training will be provided soon.\n",
     "\n",
     "**Note**: the training might take some hours, depending on the available computational resources, the dimension of the training set, the dimension of the network, and the number of epochs. \n",
     "\n",
@@ -84,7 +84,7 @@
     " - number of channel realizations (5000)\n",
     " - relative velocity between the base station and the user mobile equipment (60kmph)\n",
     " \n",
-    "It must be noted that **only one training dataset**, i.e. Datasets/ITU_VEHICULAR_B_5000_60kmph, **is available in the repository**. At any rate, in the repository, the reader can find the \"radio_data/Generate_Data.ipnyb\" which can be run to generate the datasets for training. A link to an external storage with the datsets for training will be provided soon."
+    "It must be noted that **the training dataset are currently not available in the repository**. At any rate, in the repository, the reader can find the \"radio_data/Generate_Data.ipnyb\" which can be run to generate the datasets for training. A link to an external storage with the datsets for training will be provided soon.\n"
    ]
   },
   {
