--- a/Plotting_the_results-Scenario_II.ipynb
+++ b/Plotting_the_results-Scenario_II.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "In this notebook, we plot the results, i.e., the spectral efficiency obtained by using the *delay blind*, the *hybrid*, and the *E2E* appraoch under Scenario II. We assume that there are trained models stored in a folder to load and directly test. \n",
     "\n",
-    "The reader can test the trained models on a dataset of channel realizations with a relative speed of 60 km/h (16.67 m/s), i.e., \"Datasets/ITU_VEHICULAR_B_5000_60kmph.npy\".\n",
+    "Due to storage limitations the test datasets are not available in this repository. A link to an external storage will be provided soon. Conversely, the trained models are available and they can be found in the folder Trained_models_ScenarioII.\n",
     "\n",
     "Instead of running the models, the reader can directly load and plot the spectral efficiencies obtained by the three methods over the test dataset, by setting the parameter `load_from_memory` to `True`. This can be done also for a test dataset with relative speed of 120 km/h (33.33 m/s), by setting the parameter `relative_speed` to `33.33`."
    ]
