--- a/Channel_simulation_and_prediction_with_FIR_Wiener.ipynb
+++ b/Channel_simulation_and_prediction_with_FIR_Wiener.ipynb
@@ -26,7 +26,7 @@
     "import tabulate as tab\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "\n",
-    "#Flag used to choose if the user wants to save the plots generated in the notebook\n",
+    "# Flag used to choose if the user wants to save the plots generated in the notebook\n",
     "savefig = False\n"
    ]
   },
@@ -73,7 +73,7 @@
     "We now define the radio link parameters related to the LTE channel. We suggest to the reader to keep all the parameters fixed, apart from `relative_speed`[m/s], which can let the reader appreciate the channel variations according to the speed of the mobile user. \n",
     "\n",
     "**Note**: make sure that the value selected for `relative_speed` is coherent with the selected channel profile in `channel_spec`.\n",
-    "For instance, if `relative_speed = 40`[m/s], then the selected channel profile should not be of `PEDESTRIAN` type.\n",
+    "For instance, if `relative_speed = 40` [m/s], then the selected channel profile should not be of `PEDESTRIAN` type.\n",
     "<span style=\"color:red\">"
    ]
   },
@@ -85,7 +85,7 @@
    "source": [
     "# Speed of the mobile user, assuming that the base staion is stationary\n",
     "relative_speed = 20 # [m/s]\n",
-    "# Specify the channel profile. Any on the channel profiles in Table 1 can be selected\n",
+    "# Specify the channel profile. Any of the channel profiles in Table 1 can be selected\n",
     "channel_spec = itpp.comm.Channel_Specification(itpp.comm.CHANNEL_PROFILE.ITU_Vehicular_B)\n",
     "# Transmission bandwidth and duration\n",
     "nrof_subcarriers = 72\n",
@@ -99,11 +99,11 @@
     "speed_of_light = 3e8 # [m/s]\n",
     "transmission_duration = 71.4e-6 #[s]\n",
     "transmission_interval = 1e-3 #[s]\n",
-    "cyclic_prefix_length=102\n",
+    "cyclic_prefix_length = 102\n",
     "# Define number of channel samples to generate \n",
     "nrof_channel_samples = 500\n",
     "# Flag that determines whether the cannel samples should be noisy\n",
-    "noise_flag=True\n",
+    "noise_flag = True\n",
     "# Signal to noise ratio over transmission bandwidth\n",
     "snr_dB = 1\n",
     "noise_variance = itpp.math.inv_dB(-snr_dB)  # Normalizing the received power to 1 (=0 dB) \n",
@@ -111,7 +111,7 @@
     "channel = itpp.comm.TDL_Channel(channel_spec, sampling_interval)\n",
     "# Maximum Doppler frequency \n",
     "doppler_frequency = (carrier_frequency / speed_of_light) * relative_speed\n",
-    "#Normalized channel doppler\n",
+    "# Normalized channel doppler\n",
     "norm_doppler = doppler_frequency * sampling_interval\n",
     "# Set the normalized channel Doppler\n",
     "channel.set_norm_doppler(norm_doppler)\n"
@@ -169,7 +169,7 @@
    "source": [
     "## Visualize the channel\n",
     "\n",
-    "Here below the magnitude of the channel frequency response is visualized. The reader can appreciate the frequency selectivity of the channel. In our set up we assume that the channel is block fading, i.e. the channel reman constant during each samling interval."
+    "Here below the magnitude of the channel frequency response is visualized. The reader can appreciate the frequency selectivity of the channel. In our set up we assume that the channel is block fading, i.e. the channel reman constant during each sampling interval."
    ]
   },
   {
@@ -221,10 +221,10 @@
    "source": [
     "# Part 2 - Channel prediction\n",
     "\n",
-    "In Part 2 of the notebook we focus on channel prediction. Assuming that the channel gains evolve as a Gaussian process, the FIR Wiener filter is the minimum mean squared error (MMSE) estimator. \n",
-    "The coefficients of FIR Wiener filter can be computed by solving Wiener-Hopf equation (eq. (12.65) from [[1]](#ref)). Such coefficients depend on the autocorrelation and crosscorrelation function of the channel, which , according to jakes' scattering model ([[2]](#ref)) is given by the zero-order bessel function of the first kind, i.e., $$J_{0}(2\\pi f_{d}\\tau),$$\n",
-    "where $f_{d}$ is the maximum doppler frequency.  .\n",
-    "Finally we assess the performance of our predictor by computing the mean squared error (MSE) between the predicted channel and the actual channel. We also quantify the benefit of channel prediction by comparing the Wiener filter-based MSE with the MSE computed in case no channel prediction. In the latter case the channel that we use is a delayed copy of the actual channel. \n",
+    "In Part 2 of the notebook we focus on channel prediction. Assuming that the channel gains evolve as a Gaussian process, the FIR Wiener filter is the minimum mean square error (MMSE) estimator. \n",
+    "The coefficients of FIR Wiener filter can be computed by solving Wiener-Hopf equation (eq. (12.65) from [[1]](#ref)). Such coefficients depend on the autocorrelation and crosscorrelation function of the channel, which , according to Jakes' scattering model ([[2]](#ref)) is given by the zero-order Bessel function of the first kind, i.e., $$J_{0}(2\\pi f_{d}\\tau),$$\n",
+    "where $f_{d}$ is the maximum doppler frequency.\n",
+    "Finally, we assess the performance of our predictor by computing the mean square error (MSE) between the predicted channel and the actual channel. We also quantify the benefit of channel prediction by comparing the Wiener filter-based MSE with the MSE computed in caseof  no channel prediction. In the latter case, the channel that we use is a delayed copy of the actual channel. \n",
     "\n"
    ]
   },
@@ -299,7 +299,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the following code apply Wiener filter to each channel subcarrier.\n",
+    "In the following code, we apply Wiener filter to each channel subcarrier.\n",
     "The user can select and play around with the following parameters:\n",
     "\n",
     "|Parameter| Meaning |\n",
@@ -308,9 +308,9 @@
     "|`delta`|Number of channel samples that we predict ahead|\n",
     "\n",
     "\n",
-    "Note that the number of filter taps corresponds to the number of past channel samples that we use to perform the prediction. Also, the number of channel samples that we predict ahead correspond to a time interval. Such time interval depends on the channel sampling interal. In our set up we are sampling the channel every transmission interval because we assume we have a block fading channel. If `transmission_interval = 1e-3`, then `delta = 5` indicates that we predict the channel 5 ms ahead. \n",
+    "Note that the number of filter taps corresponds to the number of past channel samples that we use to perform the prediction. Also, the number of channel samples that we predict ahead corresponds to a time interval. Such time interval depends on the channel sampling interal. In our set up we are sampling the channel every transmission interval because we assume we have a block fading channel. If `transmission_interval = 1e-3`, then `delta = 5` indicates that we predict the channel 5 ms ahead. \n",
     "\n",
-    "Note that the quality of the prediction depends on the correlaton of the channel, which strictly depends on the mobile user velocity: if the user moves very fast, the channel will change very fast, and predictions far in time will become more difficult. The same reasoning applied to the SNR value. If the channel SNR increses then the accuracy of the prediction increases."
+    "Note that the quality of the prediction depends on the correlaton of the channel, which strictly depends on the mobile user velocity: if the user moves very fast, the channel will change very fast, and predictions far in time will become more difficult. The same reasoning applies to the SNR value. If the channel SNR increases then the accuracy of the prediction increases."
    ]
   },
   {
