--- a/Delay_Blind_approach-Scenario_I.ipynb
+++ b/Delay_Blind_approach-Scenario_I.ipynb
@@ -6,11 +6,11 @@
    "source": [
     "# Delay Blind Approach -- Scenario I\n",
     "\n",
-    "In this notebook, we report the code related to the *delay-blind* appraoch in our paper [[1]](#ourpaper). The code trains a neural network to map the CSI to the probability of an error event for all the MCSs and select the MCS that maximizes the spectral efficiency. We assume that the outdated CSI available at the base station is actually the instantaneous CSI, therefore no prediction is performed. In our paper [[1]](#ourpaper), we use this setup as a baseline to show the degrading effects of outdated CSI.\n",
+    "In this notebook, we report the code related to the *delay-blind* appraoch in our paper [[1]](#ourpaper). The code trains a neural network to map the CSI to the probability of an error event for all the MCSs available at the base station and select the MCS that maximizes the spectral efficiency. We assume that the outdated CSI available at the base station is actually the instantaneous CSI, therefore no prediction is performed. In our paper [[1]](#ourpaper), we use this setup as a baseline to show the degrading effects of outdated CSI.\n",
     "\n",
     "Under Scenario I, we train a different neural network for each combination of doppler, feedback delay, and signal-to-noise-ratio.\n",
     "\n",
-    "It must be noted that the **training datasets listed below in the code are not in the repository due to space limitations**. At any rate, in the repository, the reader can find the \"radio_data/Generate_Data.ipnyb\" which can be run to generate the datasets for training. A link to an external storage with the datsets for training will be provided soon.\n",
+    "It must be noted that the **training datasets listed below in the code are currently not available in the repository due to space limitations**. At any rate, in the repository, the reader can find the codes in *radio_data* folder which can be run to generate the datasets. A link to an external storage with the datsets for training will be provided soon.\n",
     "\n",
     "\n",
     "**Note**: the training might take some hours, depending on the available computational resources, the dimension of the training set, the dimension of the network, and the number of epochs. \n",
@@ -90,7 +90,7 @@
     " - number of subcarriers (72)\n",
     " - snr (5 dB)\n",
     " \n",
-    "It must be noted that the **training datasets listed below in the code are not in the repository due to space limitations**. At any rate, in the repository, the reader can find the \"radio_data/Generate_Data.ipnyb\" which can be run to generate the datasets for training."
+    "It must be noted that the **training datasets listed below in the code are currently not available in the repository due to space limitations**. At any rate, in the repository, the reader can find the code in radio_data folder which can be run to generate the datasets.A link to an external storage with the datsets for training will be provided soon."
    ]
   },
   {
@@ -100,7 +100,7 @@
    "outputs": [],
    "source": [
     "# The files stored in the file_set ARE NOT in the repository due to space limitations, but the reader has access to the\n",
-    "# \"source/Generate_Data.ipynb\" which we used to generate the training datasets\n",
+    "# \"radio_data/Generate_Data.ipynb\" which we used to generate the training datasets.\n",
     "file_set = [\n",
     "            'Datasets/ITU_VEHICULAR_B_1000_210_16.67_72_5dB.npy',\n",
     "          'Datasets/ITU_VEHICULAR_B_1000_210_16.67_72_15dB.npy',\n",
@@ -113,7 +113,7 @@
     "dopplers_set = (20.0 / 3.0) * np.array([16.67,16.67,16.67])\n",
     "\n",
     "# Snrs related to the datasets in \"file_set\" \n",
-    "snrs_set=[5,15,25]\n",
+    "snrs_set = [5,15,25]\n",
     "\n"
    ]
   },
@@ -121,7 +121,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create the neural network model, define the optimizer, and the cost function"
+    "## Build the neural network model, define the optimizer, and the cost function"
    ]
   },
   {
@@ -165,7 +165,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Build and Train the Neural Network"
+    "## Train the Neural Network"
    ]
   },
   {
