--- a/Plotting_the_results-Scenario_I.ipynb
+++ b/Plotting_the_results-Scenario_I.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "# Plotting the results -- Scenario I\n",
     "\n",
-    "In this notebook, we plot the results , i.e., the spectral efficiency obtained by using the *hybrid*, the *E2E*, and the *delay blind* appraoch under Scenario I. We assume that there are trained models stored in a folder to load and directly test. \n",
+    "In this notebook, we plot the results , i.e., the spectral efficiency obtained by using the *hybrid*, the *E2E*, and the *delay blind* approach under Scenario I. We assume that there are trained models stored in a folder to load and directly test. \n",
     "\n",
-    "Due to storage limitations the trained models are not available in this repository. A link to an external storage will be provided soon.\n",
+    "Due to storage limitations the **trained models are currently not available** in this repository. A link to an external storage will be provided soon.\n",
     "\n",
     "Instead of running the models, the reader can directly load the spectral efficiencies obtained by the three methods over the test datasets, by setting the parameter `load_from_memory` to `True`. This can be done for two test datasets with relative speeds of 60 km/h (16.67 m/s) and 120 km/h (33.33 m/s), by setting the parameter `relative_speed` to 16.67 or 33.33, respectively.\n",
     "\n",
@@ -78,6 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Note that 'Datasets/ITU_VEHICULAR_B_5000_60kmph.npy' is currently not available\n",
     "TEST_SET = 'Datasets/ITU_VEHICULAR_B_5000_60kmph.npy'\n",
     "relative_speed = 16.67 # m/s It must be consistent with the doppler of the loaded dataset\n",
     "DOPPLER = (2e9 / 3e8) * relative_speed\n",
