--- a/Plotting_the_results-Scenario_II.ipynb
+++ b/Plotting_the_results-Scenario_II.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Plotting the results -- Scenario II\n",
     "\n",
-    "In this notebook, we plot the results, i.e., the spectral efficiency obtained by using the *delay blind*, the *hybrid*, and the *E2E* appraoch under Scenario II. We assume that there are trained models stored in a folder to load and directly test. \n",
+    "In this notebook, we plot the results, i.e., the spectral efficiency obtained by using the the *hybrid*, the *E2E*, and the *delay blind* approach under Scenario II. We assume that there are trained models stored in a folder to load and directly test. \n",
     "\n",
     "Due to storage limitations the test datasets are not available in this repository. A link to an external storage will be provided soon. Conversely, the trained models are available and they can be found in the folder Trained_models_ScenarioII.\n",
     "\n",
@@ -66,7 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Test set\n",
+    "# Note that 'Datasets/ITU_VEHICULAR_B_5000_60kmph.npy' is currently not available\n",
     "TEST_SET = 'Datasets/ITU_VEHICULAR_B_5000_60kmph.npy'\n",
     "# Relative speed between the base station and the mobile user equipemnt.It must be coherenr with the selected \"FADING_CHANNEL_DATAFILE\"\n",
     "relative_speed = 16.67\n",
