--- a/setup.ipynb
+++ b/setup.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Setup\n",
     "\n",
-    "This notebook containes useful functions used in other notebooks. In fact, it is run at the beginnig of the other notebooks."
+    "This notebook contains useful functions used in other notebooks. In fact, it is run at the beginnig of the other notebooks."
    ]
   },
   {
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Here we import libraries an utility functions\n",
+    "# Here we import libraries and utility functions\n",
     "import numpy as np\n",
     "import scipy\n",
     "from scipy import special\n",
