--- a/Hybrid_approach-Scenario_II.ipynb
+++ b/Hybrid_approach-Scenario_II.ipynb
@@ -6,11 +6,11 @@
    "source": [
     "# Hybrid Approach -- Scenario II\n",
     "\n",
-    "In this notebook, we report the code related to the *hybrid* appraoch in our paper [[1]] (#ourpaper). We consider the delay caused by the feedback loop used by the mobile user equipment to send to the base station the channel state information (CSI). Due to this feedback delay, the CSI available at the base station becomes outdated. In our paper, we propose a hybrid *data-driven* and *model-based* approach. The model-based part consists of using a FIR Wiener filter to predict the instantaneous CSI given the channel history, which we assume available at the base station. The data-driven part consists of a neural network whose input is the output of the Wiener filter. Ths network maps the CSI to the probability of an error event for all the MCSs and selects the MCS that maximizes the spectral efficiency\n",
+    "In this notebook, we report the code related to the *hybrid* appraoch in our paper [[1]](#ourpaper). We consider the delay caused by the feedback loop used by the mobile user equipment to send to the base station the channel state information (CSI). Due to this feedback delay, the CSI available at the base station becomes outdated. In our paper, we propose a hybrid *data-driven* and *model-based* approach. The model-based part consists of using a FIR Wiener filter to predict the instantaneous CSI given the channel history, which we assume available at the base station. The data-driven part consists of a neural network whose input is the output of the Wiener filter. Ths network maps the CSI to the probability of an error event for all the MCSs and selects the MCS that maximizes the spectral efficiency\n",
     "\n",
-    "Under Scenario II, we implement a different Wiener filter for each delay, but we design it to work on the full range of dopplers and signal-to-noise ratios. We then build a different neural netwok for each of Wiener's outputs and we train each of them on the full rage of dopplers and signal-to-noise ratios.\n",
+    "Under Scenario II, we implement a different Wiener filter for each delay, but we design it to work on the full range of dopplers and signal-to-noise ratios. We then build a different neural netwok for each of Wiener's outputs and we train each neural network on the full range of dopplers and signal-to-noise ratios.\n",
     "\n",
-    "It must be noted that **the training dataset are currently not available in the repository**. At any rate, in the repository, the reader can find the \"radio_data/Generate_Data.ipnyb\" which can be run to generate the datasets for training. A link to an external storage with the datsets for training will be provided soon.\n",
+    "It must be noted that **the training datasets are currently not available in the repository**. At any rate, in the repository, the reader can find the code in the *radio_data* folder which can be run to generate the datasets for training. A link to an external storage with the datsets for training will be provided soon.\n",
     "\n",
     "**Note**: the training might take some hours, depending on the available computational resources, the dimension of the training set, the dimension of the network, and the number of epochs. \n",
     "\n",
@@ -47,7 +47,7 @@
    "outputs": [],
    "source": [
     "# Number of Wiener filter taps\n",
-    "Wiener_filter_taps=10\n",
+    "Wiener_filter_taps = 10\n",
     "# Flag used to indicate if the channel is noisy\n",
     "CHANNEL_EST_NOISE = True\n",
     "# Parameters related to neural network training\n",
@@ -84,7 +84,7 @@
     " - number of channel realizations (5000)\n",
     " - relative velocity between the base station and the user mobile equipment (60kmph)\n",
     " \n",
-    "It must be noted that **the training dataset are currently not available in the repository**. At any rate, in the repository, the reader can find the \"radio_data/Generate_Data.ipnyb\" which can be run to generate the datasets for training. A link to an external storage with the datsets for training will be provided soon.\n"
+    "It must be noted that the **training datasets listed below in the code are currently not available in the repository due to space limitations**. At any rate, in the repository, the reader can find the code in *radio_data* folder which can be run to generate the datasets. A link to an external storage with the datsets for training will be provided soon."
    ]
   },
   {
