added link to external storage

--- a/Hybrid_approach-Scenario_I.ipynb
+++ b/Hybrid_approach-Scenario_I.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "Under Scenario I, we implement a different Wiener filter and we train a different neural network for each combination of delay, doppler, and signal-to-noise ratio.\n",
     "\n",
-    "It must be noted that **the training datasets are currently not available in the repository**. At any rate, in the repository, the reader can find the code in the *radio_data* folder which can be run to generate the datasets for training. A link to an external storage with the datsets for training will be provided soon.\n",
+    "It must be noted that the training datasets listed below in the code are currently not available in the repository due to space limitations. The **training datasets can be found at**: https://kth.box.com/s/tcd7y7rg3yau75kctw3regmyns8kfkr6 in the folder *Trained_folder_ScenarioI*. At any rate, in the repository, the reader can also find the codes in *radio_data* folder which can be run to generate the datasets.\n",
     "\n",
     "**Note**: the training might take some hours, depending on the available computational resources, the dimension of the training set, the dimension of the network, and the number of epochs. \n",
     "\n",
@@ -91,7 +91,7 @@
     " - number of subcarriers (72)\n",
     " - snr (5 dB)\n",
     " \n",
-    "It must be noted that the **training datasets listed below in the code are currently not available in the repository due to space limitations**. At any rate, in the repository, the reader can find the code in *radio_data* folder which can be run to generate the datasets. A link to an external storage with the datsets for training will be provided soon."
+    "The **training datasets can be found at**: https://kth.box.com/s/tcd7y7rg3yau75kctw3regmyns8kfkr6 in the folder *Datasets*"
    ]
   },
   {
@@ -100,13 +100,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The files stored in the file_set ARE NOT in the repository due to space limitations, but the reader has access to the\n",
-    "# \"source/Generate_Data.ipynb\" which we used to generate the training datasets.\n",
+    "# The files stored in the file_set ARE NOT in the repository due to space limitations.\n",
+    "# The training datasets can be found at: https://kth.box.com/s/tcd7y7rg3yau75kctw3regmyns8kfkr6 in the folder *Datasets*\n",
+    "# The reader has also access to the \"radio_data/Generate_Data.ipynb\" which we used to generate the training datasets.\n",
     "\n",
     "file_set=[\n",
-    "            'datasets/ITU_VEHICULAR_B_1000_210_16.67_72_5dB.npy',\n",
-    "          'datasets/ITU_VEHICULAR_B_1000_210_16.67_72_15dB.npy',\n",
-    "          'datasets/ITU_VEHICULAR_B_1000_500_16.67_72_25dB.npy',\n",
+    "            'Datasets/ITU_VEHICULAR_B_1000_210_16.67_72_5dB.npy',\n",
+    "          'Datasets/ITU_VEHICULAR_B_1000_210_16.67_72_15dB.npy',\n",
+    "          'Datasets/ITU_VEHICULAR_B_1000_500_16.67_72_25dB.npy',\n",
     "        ]\n",
     "# Doppler frequency related to the datasets in \"file_set\"\n",
     "dopplers_set = (20.0 / 3.0) * np.array([16.67,16.67,16.67])\n",
