--- a/Plotting_the_results-Scenario_II.ipynb
+++ b/Plotting_the_results-Scenario_II.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "In this notebook, we plot the results, i.e., the spectral efficiency obtained by using the the *hybrid*, the *E2E*, and the *delay blind* approach under Scenario II. We assume that there are trained models stored in a folder to load and directly test. \n",
     "\n",
-    "Due to storage limitations the test datasets are not available in this repository. A link to an external storage will be provided soon. Conversely, the trained models are available and they can be found in the folder Trained_models_ScenarioII.\n",
+    "Due to storage limitations the **trained models** are currently not available in this repository. They **can be found at** https://kth.box.com/s/tcd7y7rg3yau75kctw3regmyns8kfkr6, under the folder *Trained_models_ScenarioII*. The test dataset can also be found at the same link, in the folder *Datasets*.\n",
     "\n",
     "Instead of running the models, the reader can directly load and plot the spectral efficiencies obtained by the three methods over the test dataset, by setting the parameter `load_from_memory` to `True`. This can be done also for a test dataset with relative speed of 120 km/h (33.33 m/s), by setting the parameter `relative_speed` to `33.33`."
    ]
@@ -66,10 +66,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Note that 'Datasets/ITU_VEHICULAR_B_5000_60kmph.npy' is currently not available\n",
+    "# Note that 'Datasets/ITU_VEHICULAR_B_5000_60kmph.npy' can be found at the link https://kth.box.com/s/tcd7y7rg3yau75kctw3regmyns8kfkr6\n",
+    "# in the folder Datasets\n",
     "TEST_SET = 'Datasets/ITU_VEHICULAR_B_5000_60kmph.npy'\n",
-    "# Relative speed between the base station and the mobile user equipemnt.It must be coherenr with the selected \"FADING_CHANNEL_DATAFILE\"\n",
-    "relative_speed = 16.67\n",
+    "# Relative speed between the base station and the mobile user equipemnt in m/s\n",
+    "# It must be consistent with the doppler of the loaded dataset\n",
     "DOPPLER = (2e9 / 3e8) * relative_speed     \n",
     "DATASET = np.load( TEST_SET, allow_pickle = True )[()]\n",
     "NROF_FRAMES, NROF_SUBCARRIERS, NROF_SNRS = DATASET['channel'].shape\n",
@@ -95,15 +96,15 @@
     "    \n",
     "    if relative_speed == 33.33:\n",
     "        \n",
-    "        tput_DELAY_BLIND = np.load('Trained_models_ScenarioII/tput_DELAY-BLIND_sc_II_222.npy')\n",
-    "        tput_HYBRID = np.load('Trained_models_ScenarioII/tput_HYBRID_sc_II_222.npy')\n",
-    "        tput_E2E = np.load('Trained_models_ScenarioII/tput_E2E_sc_II_222.npy')\n",
+    "        tput_DELAY_BLIND = np.load('Trained_models_ScenarioII_var/tput_DELAY-BLIND_sc_II_222.npy')\n",
+    "        tput_HYBRID = np.load('Trained_models_ScenarioII_var/tput_HYBRID_sc_II_222.npy')\n",
+    "        tput_E2E = np.load('Trained_models_ScenarioII_var/tput_E2E_sc_II_222.npy')\n",
     "        \n",
     "    if relative_speed == 16.67:\n",
     "        \n",
-    "        tput_DELAY_BLIND = np.load('Trained_models_ScenarioII/tput_DELAY-BLIND_sc_II_111.npy')\n",
-    "        tput_HYBRID = np.load('Trained_models_ScenarioII/tput_HYBRID_sc_II_111.npy')\n",
-    "        tput_E2E = np.load('Trained_models_ScenarioII/tput_E2E_sc_II_111.npy')\n",
+    "        tput_DELAY_BLIND = np.load('Trained_models_ScenarioII_var/tput_DELAY-BLIND_sc_II_111.npy')\n",
+    "        tput_HYBRID = np.load('Trained_models_ScenarioII_var/tput_HYBRID_sc_II_111.npy')\n",
+    "        tput_E2E = np.load('Trained_models_ScenarioII_var/tput_E2E_sc_II_111.npy')\n",
     "\n",
     "else:\n",
     "\n",
