--- a/Delay_Blind_approach-Scenario_II.ipynb
+++ b/Delay_Blind_approach-Scenario_II.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "Under Scenario II, for each feedback delay, we train a single neural network over the full range of signal-to-noise ratios and dopplers.\n",
     "\n",
-    "It must be noted that the **training datasets listed below in the code are currently not available in the repository due to space limitations**. At any rate, in the repository, the reader can find the codes in *radio_data* folder which can be run to generate the datasets. A link to an external storage with the datsets for training will be provided soon.\n",
+    "It must be noted that the training datasets listed below in the code are currently not available in the repository due to space limitations. The **training datasets can be found at**: https://kth.box.com/s/tcd7y7rg3yau75kctw3regmyns8kfkr6 in the folder *Trained_folder_ScenarioII*. At any rate, in the repository, the reader can also find the codes in *radio_data* folder which can be run to generate the datasets. \n",
     "\n",
     "**Note**: the training might take some hours, depending on the available computational resources, the dimension of the training set, the dimension of the network, and the number of epochs. \n",
     "\n",
@@ -86,7 +86,7 @@
     " - number of channel realizations (5000)\n",
     " - relative velocity between the base station and the user mobile equipment (60kmph)\n",
     " \n",
-    "It must be noted that the **training datasets listed below in the code are currently not available in the repository due to space limitations**. At any rate, in the repository, the reader can find the code in *radio_data* folder which can be run to generate the datasets. A link to an external storage with the datsets for training will be provided soon."
+    "The **training datasets can be found at**: https://kth.box.com/s/tcd7y7rg3yau75kctw3regmyns8kfkr6 in the folder *Datasets*."
    ]
   },
   {
@@ -95,8 +95,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The files stored in the file_set ARE NOT in the repository due to space limitations, but the reader has access to the\n",
-    "# \"source/Generate_Data.ipynb\" which we used to generate the training datasets\n",
+    "# The files stored in the file_set ARE NOT in the repository due to space limitations.\n",
+    "# The training datasets can be found at: https://kth.box.com/s/tcd7y7rg3yau75kctw3regmyns8kfkr6 in the folder *Datasets*\n",
+    "# The reader has also access to the \"radio_data/Generate_Data.ipynb\" which we used to generate the training datasets.\n",
     "\n",
     "FADING_CHANNEL_DATAFILES = []\n",
     "\n",
