--- a/E2E_approach-Scenario_II.ipynb
+++ b/E2E_approach-Scenario_II.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "Under Scenario II, we build a differnt neural network for each delay, but we train it to work on the full range of dopplers and signal-to-noise ratios.\n",
     "\n",
-    "It must be noted that **the training datasets are currently not available in the repository**. At any rate, in the repository, the reader can find the code in the *radio_data* folder which can be run to generate the datasets for training. A link to an external storage with the datsets for training will be provided soon.\n",
+    "It must be noted that the training datasets listed below in the code are currently not available in the repository due to space limitations. The **training datasets can be found at**: https://kth.box.com/s/tcd7y7rg3yau75kctw3regmyns8kfkr6 in the folder *Trained_folder_ScenarioII*. At any rate, in the repository, the reader can also find the codes in *radio_data* folder which can be run to generate the datasets. \n",
     "\n",
     "**Note**: the training might take some hours, depending on the available computational resources, the dimension of the training set, the dimension of the network, and the number of epochs. \n",
     "\n",
@@ -87,7 +87,7 @@
     " - number of channel realizations (5000)\n",
     " - relative velocity between the base station and the user mobile equipment (60kmph)\n",
     " \n",
-    "It must be noted that the **training datasets listed below in the code are currently not available in the repository due to space limitations**. At any rate, in the repository, the reader can find the code in *radio_data* folder which can be run to generate the datasets. A link to an external storage with the datsets for training will be provided soon."
+    "The **training datasets can be found at**: https://kth.box.com/s/tcd7y7rg3yau75kctw3regmyns8kfkr6 in the folder *Datasets*"
    ]
   },
   {
@@ -96,18 +96,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The files stored in the file_set ARE NOT in the repository due to soace limitations, but the reader has access to the\n",
-    "# \"source/Generate_Data.ipynb\" which we used to generate the training datasets\n",
+    "# The files stored in the file_set ARE NOT in the repository due to space limitations.\n",
+    "# The training datasets can be found at: https://kth.box.com/s/tcd7y7rg3yau75kctw3regmyns8kfkr6 in the folder *Datasets*\n",
+    "# The reader has also access to the \"radio_data/Generate_Data.ipynb\" which we used to generate the training datasets.\n",
     "\n",
     "FADING_CHANNEL_DATAFILES = []\n",
     "\n",
-    "FADING_CHANNEL_DATAFILES.append('datasets/ITU_VEHICULAR_B_5000_30kmph.npy')\n",
-    "FADING_CHANNEL_DATAFILES.append('datasets/ITU_VEHICULAR_B_5000_45kmph.npy')\n",
-    "FADING_CHANNEL_DATAFILES.append('datasets/ITU_VEHICULAR_B_5000_60kmph.npy')\n",
-    "FADING_CHANNEL_DATAFILES.append('datasets/ITU_VEHICULAR_B_5000_75kmph.npy')\n",
-    "FADING_CHANNEL_DATAFILES.append('datasets/ITU_VEHICULAR_B_5000_90kmph.npy')\n",
-    "FADING_CHANNEL_DATAFILES.append('datasets/ITU_VEHICULAR_B_5000_105kmph.npy')\n",
-    "FADING_CHANNEL_DATAFILES.append('datasets/ITU_VEHICULAR_B_5000_120kmph.npy')"
+    "FADING_CHANNEL_DATAFILES.append('Datasets/ITU_VEHICULAR_B_5000_30kmph.npy')\n",
+    "FADING_CHANNEL_DATAFILES.append('Datasets/ITU_VEHICULAR_B_5000_45kmph.npy')\n",
+    "FADING_CHANNEL_DATAFILES.append('Datasets/ITU_VEHICULAR_B_5000_60kmph.npy')\n",
+    "FADING_CHANNEL_DATAFILES.append('Datasets/ITU_VEHICULAR_B_5000_75kmph.npy')\n",
+    "FADING_CHANNEL_DATAFILES.append('Datasets/ITU_VEHICULAR_B_5000_90kmph.npy')\n",
+    "FADING_CHANNEL_DATAFILES.append('Datasets/ITU_VEHICULAR_B_5000_105kmph.npy')\n",
+    "FADING_CHANNEL_DATAFILES.append('Datasets/ITU_VEHICULAR_B_5000_120kmph.npy')"
    ]
   },
   {
