--- a/Plotting_the_results-Scenario_I.ipynb
+++ b/Plotting_the_results-Scenario_I.ipynb
@@ -8,11 +8,11 @@
     "\n",
     "In this notebook, we plot the results , i.e., the spectral efficiency obtained by using the *hybrid*, the *E2E*, and the *delay blind* approach under Scenario I. We assume that there are trained models stored in a folder to load and directly test. \n",
     "\n",
-    "Due to storage limitations the **trained models are currently not available** in this repository. A link to an external storage will be provided soon.\n",
+    "Due to storage limitations the **trained models** are currently not available in this repository. They **can be found at** https://kth.box.com/s/tcd7y7rg3yau75kctw3regmyns8kfkr6, under the folder *Trained_models_ScenarioI*. The test dataset can also be found at the same link, in the folder *Datasets*.\n",
     "\n",
     "Instead of running the models, the reader can directly load the spectral efficiencies obtained by the three methods over the test datasets, by setting the parameter `load_from_memory` to `True`. This can be done for two test datasets with relative speeds of 60 km/h (16.67 m/s) and 120 km/h (33.33 m/s), by setting the parameter `relative_speed` to 16.67 or 33.33, respectively.\n",
     "\n",
-    "The name of the trained neural network models (**currently not available**) are the following:\n",
+    "The name of the trained neural network models are the following:\n",
     "\n",
     "- ANN_MCS_NO_PRED_DELAY_X_DP_Y_SNR_Z for the case of the *delay-blind* appraoch\n",
     "- ANN_E2E_MCS_PRED_DELAY_X_DP_Y_SNR_Z for the case of the *E2E* approach\n",
@@ -78,7 +78,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Note that 'Datasets/ITU_VEHICULAR_B_5000_60kmph.npy' is currently not available\n",
+    "# Note that 'Datasets/ITU_VEHICULAR_B_5000_60kmph.npy' can be found at the link https://kth.box.com/s/tcd7y7rg3yau75kctw3regmyns8kfkr6\n",
+    "# in the folder Datasets\n",
     "TEST_SET = 'Datasets/ITU_VEHICULAR_B_5000_60kmph.npy'\n",
     "relative_speed = 16.67 # m/s It must be consistent with the doppler of the loaded dataset\n",
     "DOPPLER = (2e9 / 3e8) * relative_speed\n",
@@ -103,17 +104,17 @@
     "    \n",
     "    if relative_speed == 33.33:\n",
     "        \n",
-    "        tput_DELAY_BLIND = np.load('Trained_models_ScenarioI/tput_DELAY-BLIND_sc_I_222.npy')\n",
-    "        tput_HYBRID = np.load('Trained_models_ScenarioI/tput_HYBRID_sc_I_222.npy')\n",
-    "        tput_E2E = np.load('Trained_models_ScenarioI/tput_E2E_sc_I_222.npy')\n",
-    "        mean_squared_error_with_prediction = np.load('Trained_models_ScenarioI/MSE_sc_I_222.npy')\n",
+    "        tput_DELAY_BLIND = np.load('Trained_models_ScenarioI_var/tput_DELAY-BLIND_sc_I_222.npy')\n",
+    "        tput_HYBRID = np.load('Trained_models_ScenarioI_var/tput_HYBRID_sc_I_222.npy')\n",
+    "        tput_E2E = np.load('Trained_models_ScenarioI_var/tput_E2E_sc_I_222.npy')\n",
+    "        mean_squared_error_with_prediction = np.load('Trained_models_ScenarioI_var/MSE_sc_I_222.npy')\n",
     "        \n",
     "    if relative_speed == 16.67:\n",
     "        \n",
-    "        tput_DELAY_BLIND = np.load('Trained_models_ScenarioI/tput_DELAY-BLIND_sc_I_111.npy')\n",
-    "        tput_HYBRID = np.load('Trained_models_ScenarioI/tput_HYBRID_sc_I_111.npy')\n",
-    "        tput_E2E = np.load('Trained_models_ScenarioI/tput_E2E_sc_I_111.npy')\n",
-    "        mean_squared_error_with_prediction = np.load('Trained_models_ScenarioI/MSE_sc_I_111.npy')\n",
+    "        tput_DELAY_BLIND = np.load('Trained_models_ScenarioI_var/tput_DELAY-BLIND_sc_I_111.npy')\n",
+    "        tput_HYBRID = np.load('Trained_models_ScenarioI_var/tput_HYBRID_sc_I_111.npy')\n",
+    "        tput_E2E = np.load('Trained_models_ScenarioI_var/tput_E2E_sc_I_111.npy')\n",
+    "        mean_squared_error_with_prediction = np.load('Trained_models_ScenarioI_var/MSE_sc_I_111.npy')\n",
     "    \n",
     "else:\n",
     "    for DELAY in range( 0, maximum_delay + 1):\n",
