updated with new utilities function

--- a/Delay_Blind_approach-Scenario_II.ipynb
+++ b/Delay_Blind_approach-Scenario_II.ipynb
@@ -146,8 +146,8 @@
     "\n",
     "channel_coeff_concat = np.concatenate( ( np.real( channel_coeff ), np.imag( channel_coeff ) ), axis = 1 )\n",
     "\n",
-    "train_input  = flatten_snr_axis( channel_coeff_concat ) \n",
-    "train_target = flatten_snr_axis( block_success )\n",
+    "train_input  = utils.flatten_snr_axis( channel_coeff_concat ) \n",
+    "train_target = utils.flatten_snr_axis( block_success )\n",
     "\n",
     "train_input, train_target = utils.shuffle_data( train_input, train_target )\n",
     "\n",
