--- a/E2E_approach-Scenario_II.ipynb
+++ b/E2E_approach-Scenario_II.ipynb
@@ -210,11 +210,11 @@
     "\n",
     "for delay in range(0,maximum_delay + 1):\n",
     "    if delay > 0:\n",
-    "        train_input  = flatten_snr_axis( channel_coeff_concat[ :-delay, :, :] )\n",
+    "        train_input  = utils.flatten_snr_axis( channel_coeff_concat[ :-delay, :, :] )\n",
     "    else:\n",
-    "        train_input  = flatten_snr_axis( channel_coeff_concat )\n",
+    "        train_input  = utils.flatten_snr_axis( channel_coeff_concat )\n",
     "\n",
-    "    train_target = flatten_snr_axis( block_success [ delay :, :, : ] )\n",
+    "    train_target = utils.flatten_snr_axis( block_success [ delay :, :, : ] )\n",
     "\n",
     "    train_input, train_target = utils.shuffle_data( train_input, train_target )\n",
     "\n",
