--- a/Hybrid_approach-Scenario_II.ipynb
+++ b/Hybrid_approach-Scenario_II.ipynb
@@ -115,6 +115,8 @@
     "\n",
     "# Snrs range that we consider  \n",
     "snrs_set = np.array(range(0,30))\n",
+    "# Snrs range that we consider in dB \n",
+    "snrs_dB = (np.load( 'Datasets/ITU_VEHICULAR_B_5000_30kmph.npy', allow_pickle = True )[()])['snrs_db']\n",
     "\n",
     "channel_sampling_interval = 0.001\n",
     "\n",
@@ -276,11 +278,11 @@
     "    \n",
     "    channel_coeff_concat = np.concatenate( ( np.real( channel_coeff ), np.imag( channel_coeff ) ), axis = 1 )\n",
     "    if DELAY > 0:\n",
-    "        train_input  = flatten_snr_axis( channel_coeff_concat[ :-DELAY, :, : ] )\n",
+    "        train_input  = utils.flatten_snr_axis( channel_coeff_concat[ :-DELAY, :, : ] )\n",
     "    else:\n",
-    "        train_input  = flatten_snr_axis( channel_coeff_concat )\n",
+    "        train_input  = utils.flatten_snr_axis( channel_coeff_concat )\n",
     "\n",
-    "    train_target = flatten_snr_axis( block_success [ DELAY :, :, : ] )\n",
+    "    train_target = utils.flatten_snr_axis( block_success [ DELAY :, :, : ] )\n",
     "\n",
     "    train_input, train_target = utils.shuffle_data( train_input, train_target )\n",
     "\n",
